[package]
name = "acmake"
version = "0.1.0"
edition = "2021"
authors = ["Xinto"]
license = "GPL-3.0-only"
description = "A cargo-like tool for CMake projects"
readme = "README.md"
homepage = "https://github.com/X1nto/ACMake"
repository = "https://github.com/X1nto/ACMake"
keywords = ["cmake", "c", "cpp", "generator", "cargo"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
indoc = "2.0.1"
